_log/2013.year/04.month/17.day/_start_80_04_17_2013__10_25_11.log
input params list:
0: /opt/node-v0.10.0-linux-x64/bin/node
1: /opt/cluster/80/_start.js
2: -port
3: 80
4: -EXEC_PATH
5: /opt/cluster/
6: -DOMAIN_IP
7: 42.121.96.101
8: -DOMAIN_NAME
9: 17597.net
/opt/node-v0.10.0-linux-x64/bin
require underscore
require underscore:1.4.4
require nodemailer
require socket.io
require cheerio
require iconv-lite
require mongodb
========================================================================================
=  Please ensure that you set the default write concern for the database by setting    =
=   one of the options                                                                 =
=                                                                                      =
=     w: (value of > -1 or the string 'majority'), where < 1 means                     =
=        no write acknowlegement                                                       =
=     journal: true/false, wait for flush to journal before acknowlegement             =
=     fsync: true/false, wait for flush to file system before acknowlegement           =
=                                                                                      =
=  For backward compatibility safe is still supported and                              =
=   allows values of [true | false | {j:true} | {w:n, wtimeout:n} | {fsync:true}]      =
=   the default value is false which means the driver receives does not                =
=   return the information of the success/error of the insert/update/remove            =
=                                                                                      =
=   ex: new Db(new Server('localhost', 27017), {safe:false})                           =
=                                                                                      =
=   http://www.mongodb.org/display/DOCS/getLastError+Command                           =
=                                                                                      =
=  The default of no acknowlegement will change in the very near future                =
=                                                                                      =
=  This message will disappear when the default safe is set on the driver Db           =
========================================================================================
require request
require connect
require formidable
require async
require express
import:mime
import:conf
import:com.easysoft.zoo.Elephant
import:com.easysoft.Widget
import:com.easysoft.constant.Constant
import:com.easysoft.zoo.Spider
import:com.easysoft.zoo.Dog
import:com.easysoft.schedule.Schedule
This platform is linux
Version: v0.10.0
Port: 80
__filename: /opt/cluster/80/_start.js
import:route
import:com.easysoft.cmd.ipconfig
AY1212050941431d46085
[]
--conn db success--
req.headers:1366165525341:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'connection':'keep-alive',  'if-modified-since':'1366165316690'}
req.connection.remoteAddress:1366165525341:202.108.130.138
req.method:1366165525341:GET
request|Wed Apr 17 2013 10:25:25 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|undefined
import:com.easysoft.service.Login
import:com.easysoft.service.Service
importTemplate:com.easysoft.service.templates.Login
req.headers:1366165526061:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'text/css,*/*;q=0.1',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive',  'if-modified-since':'1366165317451'}
req.connection.remoteAddress:1366165526061:202.108.130.138
req.method:1366165526061:GET
request|Wed Apr 17 2013 10:25:26 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.service.css_min
import:com.easysoft.service.PackService
req.headers:1366165526067:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'*/*',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive',  'if-modified-since':'1366165317454'}
req.connection.remoteAddress:1366165526067:202.108.130.138
req.method:1366165526067:GET
request|Wed Apr 17 2013 10:25:26 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.service.dojo_min
req.headers:1366165526068:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'*/*',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive',  'if-modified-since':'1366165317453'}
req.connection.remoteAddress:1366165526068:202.108.130.138
req.method:1366165526068:GET
request|Wed Apr 17 2013 10:25:26 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.service.admin.widget_min
req.headers:1366165528943:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive',  'if-modified-since':'1366165321969'}
req.connection.remoteAddress:1366165528943:202.108.130.138
req.method:1366165528943:GET
request|Wed Apr 17 2013 10:25:28 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.util.webFolder.readWebFolder
req.headers:1366165530537:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'image/png,image/*;q=0.8,*/*;q=0.5',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive'}
req.connection.remoteAddress:1366165530537:202.108.130.138
req.method:1366165530537:GET
request|Wed Apr 17 2013 10:25:30 GMT+0800 (CST)|GET|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.service.CheckImg
req.headers:1366165531906:{  'host':'17597.net',  'user-agent':'Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0',  'accept':'text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8',  'accept-language':'en-us,zh-cn;q=0.8,zh;q=0.5,en;q=0.3',  'accept-encoding':'gzip, deflate',  'referer':'http://17597.net/e/login',  'connection':'keep-alive',  'content-type':'application/x-www-form-urlencoded',  'content-length':'48'}
req.connection.remoteAddress:1366165531906:202.108.130.138
req.method:1366165531906:POST
request|Wed Apr 17 2013 10:25:31 GMT+0800 (CST)|POST|202.108.130.138|Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0|http://17597.net/e/login
import:com.easysoft.service.Logining

undefined:49
				dojo.sendMail({title:"loging system successful"}});
				                                                ^
SyntaxError: Unexpected token }
    at Object._import [as import] (/opt/cluster/80/_bin/script/dojos.js:66:10)
    at dojo.declare.runServer (eval at _import (/opt/cluster/80/_bin/script/dojos.js:66:10), <anonymous>:27:14)
    at eval (eval at _import (/opt/cluster/80/_bin/script/dojos.js:66:10), <anonymous>:68:9)
    at IncomingMessage.<anonymous> (/opt/cluster/80/_bin/script/dojo.js:259:7)
    at IncomingMessage.EventEmitter.emit (events.js:92:17)
    at _stream_readable.js:870:14
    at process._tickCallback (node.js:415:13)
